--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.8.7",
     "autoprefixer": "^9.8.0",
+    "axios": "^0.20.0",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
