--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/CEOsewon/wetube#readme",
   "dependencies": {
+    "@babel/cli": "^7.11.6",
     "@babel/core": "^7.8.7",
     "@babel/node": "^7.8.7",
     "@babel/polyfill": "^7.10.1",
@@ -43,14 +44,20 @@
     "passport-local-mongoose": "^6.0.1",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
+    "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore '.scss'",
-    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
-    "build:assets": "cross-env WEBPACK_ENV=production webpack"
+    "dev:server": "nodemon --exec babel-node src/init.js --delay 2 --ignore '.scss'",
+    "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
+    "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js'",
+    "copyAll": "xcopy src\\static build\\static /e /y && xcopy src\\views build\\views /e /y",
+    "build": "npm run build:server && npm run build:assets && npm run copyAll",
+    "prebuild": "del build",
+    "start": "npm run build && node build/init.js"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
