# Review building mode production

--- a/package.json
+++ b/package.json
@@ -48,9 +48,14 @@
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore '.scss'",
-    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
-    "build:assets": "cross-env WEBPACK_ENV=production webpack"
+    "dev:server": "nodemon --exec babel-node src/init.js --delay 2 --ignore '.scss'",
+    "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
+    "build:server": "babel src --out-dir build --ignore src/assets,src/static,src/webpack.config.js",
+    "prebuild": "Rmdir /S build",
+    "copyAll": "xcopy src\\static build\\static /E /I /Y && xcopy src\\views build\\views /E /I /Y",
+    "build": "npm run build:server && npm run build:assets && npm run copyAll",
+    "start": "node build/init.js"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
