--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
     "build:server": "babel src --out-dir build --ignore src/assets,src/static,src/webpack.config.js",
-    "prebuild": "Rmdir /S build",
+    "prebuild": "rm -rf /S build",
     "copyAll": "xcopy src\\static build\\static /E /I /Y && xcopy src\\views build\\views /E /I /Y",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
     "start": "node build/init.js"
