--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/CEOsewon/wetube#readme",
   "dependencies": {
+    "@babel/cli": "^7.11.6",
     "@babel/core": "^7.8.7",
     "@babel/node": "^7.8.7",
     "@babel/polyfill": "^7.10.1",
